feat(security): Story 2.1 T1 — AD-12 security port contract types
Author the AD-12 proxy/security/ port contract (AC1) + ratify its shape by reflection.
relay/ wires against AlwaysAllowBindCredentialVerifier until Epic 3 swaps the real ROPC
adapter in behind the unchanged port.

Types (package smpp.companion.proxy.security):
- BindCredentialVerifier — VerdictRequest verify(BindCredential, ScopedValue<RequestContext>) (AD-12)
- sealed Verdict permits Allow/DenyInvalid/DenyIndeterminate — no Throwable/reason/Nimbus crosses the port
- BindCredential(SystemId, Password) — composes the two typed records; redacting toString
- SystemId — AsciiString-backed SMPP system_id, <=15 value octets (the non-secret identity, AD-14)
- Password — AsciiString-backed SMPP password (the typed secret), <=8 value octets; no defensive copy
  (shared backing array -> a single AsciiString.array() wipe covers the record's own copy); redacting toString
- VerdictRequest — CompletableFuture<Verdict> future() + void cancelHttp() (AD-32, aborts the wire call)
- RequestContext — SystemId + ChannelId + Instant deadline (AD-5), ScopedValue-bound (never ThreadLocal)
- AlwaysAllowBindCredentialVerifier — @Component stand-in (completed-Allow, no-op cancelHttp)

Password type (CODEC-024/PRIV-1, extended to the port): AsciiString (not char[]) matches the codec's
2026-07-28 override for full type-uniformity; the AsciiString->char[] relay-seam conversion is eliminated.
Resolves the FIXME on BindCredential. Accepted hazard (CODEC-024 P2 / AI-5): AsciiString.toString() lazily
caches an immortal String the wipe can't reach — Password/BindCredential toString() overrides redact, and the
standing AI-5 bytecode scan must forbid toString() on the password across codec + port before relay logging.

Tests: 30 security tests green (6 PasswordTest, 4 BindCredentialTest, + shape/null/behavior). RED-on-neuter
verified on every load-bearing guard — Password length bound + toString redaction + BindCredential.password
null g